--- a/tooplate-bistro-elegance.css
+++ b/tooplate-bistro-elegance.css
@@ -34,12 +34,12 @@ nav {
 }
 
  .my-background-div {
-        background-image: url('images/poster7.png'); /* Replace with your image path */
-        background-size: cover; /* Scales the image to cover the entire div */
+        background-image: url('D:/deepak/BiscuitEAtta/images/poster7.png'); /* Replace with your image path */
+       /*  background-size: cover; Scales the image to cover the entire div */
         background-position: center; /* Centers the image */
         background-repeat: no-repeat; /* Prevents the image from repeating */
-        height: 600px; /* Set a height for the div to see the background */
-        width: 80%; /* Optional: set a width */
+        height: 480px; /* Set a height for the div to see the background */
+        width: 100%; /* Optional: set a width */
     }
 
 .nav-container {
@@ -312,7 +312,7 @@ nav {
 
 /* Section Styles */
 section {
-	padding: 5rem 2rem;
+	padding: 0rem 2rem;
 	max-width: 1200px;
 	margin: 0 auto;
 }
@@ -737,6 +737,4 @@ footer {
 	.reservation-form {
 		grid-template-columns: 1fr;
 	}
-
 }
-
