--- a/tooplate-bistro-elegance.css
+++ b/tooplate-bistro-elegance.css
@@ -34,7 +34,7 @@ nav {
 }
 
  .my-background-div {
-        background-image: url('D:/deepak/BiscuitEAtta/images/poster7.png'); /* Replace with your image path */
+        background-image: url('images/poster7.png'); /* Replace with your image path */
        /*  background-size: cover; Scales the image to cover the entire div */
         background-position: center; /* Centers the image */
         background-repeat: no-repeat; /* Prevents the image from repeating */
@@ -738,3 +738,4 @@ footer {
 		grid-template-columns: 1fr;
 	}
 }
+
